<resources>
    <string name="app_name">EzyProperty</string>
    <string name="welcome">Welcome to Ezy Property!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="property_list">Property List</string>
    <string name="enter_ppt_name">Enter property name..</string>
    <string name="enter_ppt_location">Enter property location..</string>
    <string name="enter_ppt_rental">Enter property rental (RM)..</string>
    <string name="add">Add</string>
    <string name="add_contact">Add Contect</string>
    <string name="import_contact">Import Contect</string>
    <string name="ppt_location">Property Location</string>
    <string name="ppt_tyoe">Residential</string>
    <string name="property_detail">PROPERTY DETAIL</string>
    <string name="ppt_rental">Rental (RM)</string>
    <string name="ppt_type">Property Type</string>

    <string name="enter_tenant_name">Enter tenant name</string>
    <string name="enter_tenant_conact">Enter tenant contact</string>
    <string name="enter_tenant_email">Enter tenant email</string>
    <string name="enter_tenant_payment_date">Enter tenant payment date</string>
    <string name="pick">Pick</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="payment_date">Payment Date</string>
    <string name="gender">Gender</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="profile_names">Display name</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>

    <array name="propertyTypeArray">
        <item name="Residential">Residential</item>
        <item name="Office">Office</item>
        <item name="Retail">Retail</item>
        <item name="Industrial">Industrial</item>
        <item name="Hotels">Hotels</item>
    </array>

    <array name="gender">
        <item name="m">Male</item>
        <item name="f">Female</item>
    </array>

</resources>
