<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/backgound2">


    <EditText
        android:id="@+id/editTextName_tenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tenant_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/textViewContact_tenant_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextName_tenant"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorBlack"
        android:hint="@string/enter_tenant_conact"
        android:inputType="textCapSentences|textAutoCorrect"

        />

    <EditText
        android:id="@+id/textViewEmail_tenant_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewContact_tenant_ud"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorBlack"
        android:hint="@string/enter_tenant_email"
        android:inputType="textCapSentences|textAutoCorrect"

        />
    <EditText
        android:id="@+id/textViewPaymentDate_tenant_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewEmail_tenant_ud"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorBlack"
        android:hint="@string/enter_tenant_payment_date"
        android:inputType="textCapSentences|textAutoCorrect"

        />


    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPaymentDate_tenant_ud"
        android:entries="@array/gender"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateTenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rect3"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonDeleteTenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rect2"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>