<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgrect"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTenantDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="TENANT DETAIL"
            android:textColor="#ffffff"
            android:textSize="23dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/name_et_tenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rect"
            android:drawableLeft="@mipmap/ic_account_circle"
            android:drawablePadding="16dp"
            android:hint="@string/edit_profile_name"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:textColor="#fff"
            android:textColorHint="#ffffff" />



        <TextView
            android:id="@+id/genderTenant_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect"
            android:drawableLeft="@mipmap/email"
            android:drawablePadding="23dp"
            android:hint="@string/gender"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:textColor="#fff"
            android:textColorHint="#ffffff"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/contactTenant_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect"
            android:drawableLeft="@mipmap/ic_phone"
            android:drawablePadding="16dp"
            android:hint="@string/edit_profile_phone"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:textColor="#fff"
            android:textColorHint="#ffffff"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/emailTenant_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect"
            android:drawableLeft="@mipmap/ic_email"
            android:drawablePadding="16dp"
            android:hint="@string/email_hint"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:textColor="#fff"
            android:textColorHint="#ffffff"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/Payment_Date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect"
            android:drawableLeft="@mipmap/ic_date_range"
            android:drawablePadding="16dp"
            android:hint="@string/payment_date"
            android:paddingBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:textColor="#fff"
            android:textColorHint="#ffffff"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:background="@drawable/rect1"
            android:id="@+id/buttonSendEmailOnViewPage"/>

    </LinearLayout>

</RelativeLayout>

    <!--xml reference: https://mega.nz/#!eZIxFDCI!qIptjclKbyOI6OcXk-aQ4CZ58mP_EX&#45;&#45;DI0OAP6Gkgo-->