<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page_background2"
    android:padding="16dp"
    tools:context="com.example.emilie.property_management_5.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:adjustViewBounds="true"
        android:maxHeight="70dp"
        android:maxWidth="70dp"
        android:src="@drawable/house"/>


    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:textColor="@color/colorAccent"
        android:text="@string/no_text"
        android:padding="8dp"
        android:layout_marginTop="56dp"
       />

    <EditText
        android:id="@+id/email_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/login_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:drawableLeft="@mipmap/email"
        android:drawablePadding="@dimen/_10sdp"
        android:backgroundTint="@color/colorWhite"
        />

    <EditText
        android:id="@+id/password_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/email_signUpPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:drawableLeft="@mipmap/pass"
        android:drawablePadding="@dimen/_10sdp"
        android:backgroundTint="@color/colorWhite"


        />

    <Button
        android:id="@+id/signUp_button_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_signUpPage"
        android:layout_marginTop="29dp"
        android:background="@drawable/rect2"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/sign_up_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUp_button_signUpPage"
        android:background="@drawable/rect3"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/login_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</RelativeLayout>