<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.emilie.property_management_5.PropertyHomePage"
    android:background="@drawable/backgound4">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ppt_name"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="textCapSentences|textAutoCorrect"
        android:backgroundTint="@color/colorWhite"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />

    <EditText
        android:id="@+id/textViewPropertyLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextName"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/enter_ppt_location"
        android:textColorHint="@color/colorWhite"
        android:inputType="textCapSentences|textAutoCorrect"
        android:backgroundTint="@color/colorWhite"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />

    <EditText
        android:id="@+id/textViewPropertyRental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPropertyLocation"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/enter_ppt_rental"
        android:digits="0123456789"
        android:textColorHint="@color/colorWhite"
        android:inputType="textCapSentences|textAutoCorrect"
        android:backgroundTint="@color/colorWhite"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        />


    <Spinner
        android:id="@+id/spinnerProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPropertyRental"
        android:layout_marginTop="10dp"
        android:entries="@array/propertyTypeArray"
        android:backgroundTint="@color/colorWhite"

        />

    <Button
        android:id="@+id/buttonAddProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerProperties"
        android:layout_marginTop="14dp"
        android:background="@drawable/rect1"
        android:text="@string/add"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddProperties"
        android:divider="#404040"
        android:dividerHeight="0.5dp"
       />



</RelativeLayout>

